create portfolio project

--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compastible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html>
+    <head>
+        <title>Create A Web Page Discussion</title>
+    </head>
+
+    <font face = "Courier New" size = "5">
+        <h1 style = "font-family: Courier New;">Harley Davidson</h1>
+    </font>
+
+<h2>Types of Harley Davidson Motorcycles</h2>
+<ol>
+    <li>Cruisers</li> <p>Good for everyday riding</p>
+    <li>Touring</li> <p>Good for everyday and long distance riding</p>
+    <li>Adventure</li> <p>Good for on and off-road riding</p>
+</ol>
+
+<h3>Names of Harley Davidson Motorcycles</h3>
+<ul>
+    <li>Low Rider</li>
+    <li>Road Glide</li>
+    <li>Pan Am</li>
+</ul>
+
+<body style = "background-color: orange;">
+<img src="https://upload.wikimedia.org/wikipedia/commons/d/de/Harley-Davidson_logo.svg"/>
+<a href="https://www.harley-davidson.com/us/en/index.html">Harley Davidson Motorcycles</a>
+
 </html>
